2011-XX-XX  version 0.18 

	* new() doesn't die if 'homedir' isn't writeable. 
		[RT568] (bug reported by Mark Stosberg)

2010-05-25  version 0.17 Mark Frost

    * Applied a patch written by Niko Tyni to fix a hanging issue discovered by Salvatore Bonaccorso in chroot environments.

2010-04-19  version 0.16 Mark Frost

    * Fixed a hanging issue that came up under certain scenarios. 

2010-04-19  version 0.15 Mark Frost

    * Added some quotes whose absence was causing one of the original tests to fail. 

2010-04-16  version 0.14 Mark Frost

    * Fixed an endless read-wait scenario introduced in 0.13

2010-04-16  version 0.13 Mark Frost

    * Catching up some outstanding changes I left out in releases 11 and 12

2010-02-03  version 0.12 Mark Frost

    * This release is merely some documentation fixes

2010-01-27  version 0.11 Mark Frost

    * The module should now properly handle the situation where a key is 
    setup with a blank passphrase, as long as passphrase => undef is provided 
    (or left out)
    * Fixed an issue where STDIN and STDOUT cannot be overridden in an 
    Apache environment. 

2009-05-07  version 0.10 Robbie Bow

    * Changes in 0.09_0{1-3} being released in to the wild proper.
    * Includes fixes that should resolve these RT tickets:
        * 6563
        * 6562
        * 4957
        * 1364
      (which are all variations on the same two themes)

2009-05-07  version 0.09_03 Robbie Bow

    * Dev release - Fix import_key to expect correct response;
    fix encrypt to expect correct response (both running against
    gnupg 1.4.6); use Test::More for tests

2009-05-06  version 0.09_02 Robbie Bow

    * Dev release - update $VERSION in GnuPG.pm to see
    cpantesters reports

2009-05-06  version 0.09_01 Robbie Bow

    * Dev release that cargo cults the numerous fixes Debian
    maintainers have added since the last release.
    See debian/chnagelog for more details

2001-05-23  Francis J. Lacoste  <francis.lacoste@Contre.COM>
