@@ -1,5 +1,6 @@
 2011-XX-XX  version 0.18 
 
+	* encrypt() now accept many recipients. [RT71127]
 	* new() doesn't die if 'homedir' isn't writeable. 
 		[RT568] (bug reported by Mark Stosberg)
 
